--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 8000
 ORIGIN = ['http://localhost:3000/']
-MONGO_DB_URL = 'mongodb+srv://afdulrohmat03:3UY1FMcWpBx3l5EP@lms-cluster.wwhfyhi.mongodb.net/learning-management-system?retryWrites=true&w=majority'
-# MONGO_DB_URL='mongodb://127.0.0.1:27017/learning-management-system'
+# MONGO_DB_URL = 'mongodb+srv://afdulrohmat03:3UY1FMcWpBx3l5EP@lms-cluster.wwhfyhi.mongodb.net/learning-management-system?retryWrites=true&w=majority'
+MONGO_DB_URL='mongodb://127.0.0.1:27017/learning-management-system'
 NODE_ENV = development
 CLOUDINARY_NAME = dmyo8iuwy
 CLOUDINARY_API_KEY = 345322644637628
